@@ -1,4 +1,4 @@
-The SWORD Project is (c) 1994-2005 The CrossWire Bible Society, under the
+The SWORD Project is (c) 1994-2006 The CrossWire Bible Society, under the
 terms of the GNU GPL, as stated below.
 
 NOTE: The text of the GNU GPL license is copyrighted by the Free Software
