@@ -3,6 +3,7 @@ API ChangeLog	(see the ChangeLog in each 'apps' directory for
 
 29-Aug-2006	Troy A. Griffitts <scribe@crosswire.org>
 	Added recognition for the sysConfig parameter in SWMgr c-tor
+		(allow passing path to sword.conf to use for config)
 	Updated CORBA server to allow option -sysConf /path/sword.conf
 
 16-Aug-2006	Troy A. Griffitts <scribe@crosswire.org>
